# facebook_outreach

./: .gitignore  README.md  pyproject.toml  repro_issue.py  requirements.txt
src/fb_outreach/: __init__.py  agent.py  apify_service.py  app.py  custom_memory_session.py  data_transformers.py  dependencies.py  email_service.py  facebook_ads_service.py  main.py  outreach_pipeline.py  pitch_generation_service.py  prospect_builder.py  routes.py  schemas.py  security.py
